[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkrouter"
version = "1.0.0"
description = "Modern asynchronous multi-page navigation for Tkinter applications"
readme = "README.md"
authors = [
    { name = "Raj Kashyap", email = "rajkashyapatservice@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["tkinter", "gui", "routing", "navigation", "async", "ui"]

[project.urls]
Homepage = "https://github.com/Raj-Kashyap001/tkrouter"
Documentation = "https://github.com/Raj-Kashyap001/tkrouter#readme"
Repository = "https://github.com/Raj-Kashyap001/tkrouter"
Issues = "https://github.com/Raj-Kashyap001/tkrouter/issues"

[tool.setuptools]
packages = ["tkrouter"]